samples/_failures_safe/1761044336_8b3b32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8c9081b.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_a8c9081b.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
